updated the spacing for tablet and trying to fix the container for very big screen

--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,10 @@ select {
 /* ################### */
 
 @media only screen and (min-width: 1025px) {
+  .main-header .container {
+    max-width: 100vw;
+  }
+
   .headline-container,
   .main-footer .container {
     margin-left: 6rem;
@@ -259,6 +263,7 @@ select {
 
   .headline-container {
     position: relative;
+    max-width: 950px;
   }
 
   .desktop-row {
@@ -279,7 +284,8 @@ select {
   input,
   select {
     font-size: 1.125rem;
-    max-width: 460px;
+    margin-bottom: 2.5rem;
+    max-width: 468px;
   }
 
   .swatch {
@@ -295,9 +301,9 @@ select {
 /* ################# */
 /* Bigger Screen */
 /* ################### */
-@media (min-width: 1400px) {
-  .container {
-    max-width: 1600px;
-    /* padding-right: 13rem; */
+@media (min-width: 1750px) {
+  .headline-container,
+  .main-footer .container {
+    margin-left: 9rem;
   }
 }
